code push for reload issue

--- a/Foresome/Foresome/AfterLogin/UserProfile/Header/ProfileHeader.xib
+++ b/Foresome/Foresome/AfterLogin/UserProfile/Header/ProfileHeader.xib
@@ -23,7 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="533" height="199"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_1" translatesAutoresizingMaskIntoConstraints="NO" id="lAy-wz-SC8">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_1" translatesAutoresizingMaskIntoConstraints="NO" id="lAy-wz-SC8">
                     <rect key="frame" x="0.0" y="0.0" width="533" height="199"/>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="a27-Lb-23U">
