--- a/Foresome/Foresome/AfterLogin/NewsFeed/Cell/PollResultTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Cell/PollResultTableCell.xib
@@ -79,18 +79,15 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogl-Ld-Qoz" customClass="ExpendableLinkLabel" customModule="Foresome" customModuleProvider="target">
-                                <rect key="frame" x="16" y="83" width="310" height="39.666666666666657"/>
+                                <rect key="frame" x="16" y="83" width="310" height="78.666666666666686"/>
                                 <string key="text">The most important question of all: At the turn, you’re gabbing The most important question of all: At the turn, you’re gabbing a…</string>
                                 <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                 <color key="textColor" red="0.1333333333" green="0.15686274510000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="axE-hk-Lnp">
-                                <rect key="frame" x="16" y="130.66666666666666" width="310" height="236.99999999999997"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="axE-hk-Lnp" customClass="AutoResizeTableView" customModule="Foresome" customModuleProvider="target">
+                                <rect key="frame" x="16" y="169.66666666666663" width="310" height="198"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="237" id="j2M-St-sSj"/>
-                                </constraints>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="987 votes • Poll ended" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T0u-OR-gHI">
                                 <rect key="frame" x="16" y="375.66666666666669" width="310" height="18.333333333333314"/>
@@ -205,7 +202,6 @@
                 <outlet property="postDescriptionLbl" destination="Ogl-Ld-Qoz" id="syJ-wf-d6l"/>
                 <outlet property="profileImage" destination="8pJ-95-tSI" id="UoL-hc-dUH"/>
                 <outlet property="shareBtn" destination="CAd-Wn-bwQ" id="qxR-s4-jyy"/>
-                <outlet property="tableViewHeight" destination="j2M-St-sSj" id="1Tv-dP-Esq"/>
                 <outlet property="timeLbl" destination="N4M-gt-Gov" id="5L6-WI-ffD"/>
                 <outlet property="userNameLbl" destination="kqM-j2-f5q" id="IOZ-Vl-uVS"/>
             </connections>
