--- a/Foresome/Foresome/AfterLogin/NewsFeed/Header/NewsHeader.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Header/NewsHeader.xib
@@ -23,7 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="640" height="301"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="svf-y7-eO3">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="svf-y7-eO3">
                     <rect key="frame" x="0.0" y="0.0" width="640" height="301"/>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="3Bq-EH-BOo">
