--- a/Foresome/Foresome/AfterLogin/NewsFeed/View/NewsFeedViewController.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/View/NewsFeedViewController.xib
@@ -4,12 +4,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewsFeedViewController" customModule="Foresome" customModuleProvider="target">
             <connections>
+                <outlet property="loader" destination="njc-mI-ESd" id="leX-oe-uPa"/>
                 <outlet property="newsFeedTableView" destination="sqT-xK-bzP" id="1Nh-cW-rbL"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -23,16 +25,27 @@
                     <rect key="frame" x="0.0" y="0.0" width="393" height="818"/>
                     <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </tableView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="njc-mI-ESd">
+                    <rect key="frame" x="178" y="79" width="37" height="37"/>
+                    <color key="color" name="nxtBtnColor"/>
+                </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="sqT-xK-bzP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="HJ5-Ly-UNf"/>
+                <constraint firstItem="njc-mI-ESd" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ISn-sK-O3k"/>
                 <constraint firstItem="sqT-xK-bzP" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="PUh-6u-gHt"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="sqT-xK-bzP" secondAttribute="bottom" id="RWM-Kq-kGq"/>
+                <constraint firstItem="njc-mI-ESd" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="ah0-58-opP"/>
                 <constraint firstItem="sqT-xK-bzP" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ciE-cq-PfD"/>
             </constraints>
             <point key="canvasLocation" x="139.69465648854961" y="20.422535211267608"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="nxtBtnColor">
+            <color red="0.25098039215686274" green="0.80392156862745101" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
