--- a/Foresome/Foresome/AfterLogin/NewsFeed/Cell/PollResultTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Cell/PollResultTableCell.xib
@@ -114,9 +114,11 @@
                                         <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="15"/>
                                         <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <state key="normal" title="0" image="ic_like">
-                                            <color key="titleColor" red="0.59215686270000001" green="0.61176470589999998" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" red="0.59215686274509804" green="0.61176470588235299" blue="0.62745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
-                                        <state key="selected" title="1" image="ic_liked"/>
+                                        <state key="selected" title="1" image="ic_liked">
+                                            <color key="titleColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="likeAction:" destination="cUS-JK-dYg" eventType="touchUpInside" id="Xl6-Vd-iPJ"/>
                                         </connections>
