--- a/Foresome/Foresome/Friends/View/Header/FriendsTableHeader.xib
+++ b/Foresome/Foresome/Friends/View/Header/FriendsTableHeader.xib
@@ -156,7 +156,7 @@
                         <action selector="searchButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Ndl-Ok-1N7"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l9h-og-9iV">
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l9h-og-9iV">
                     <rect key="frame" x="334" y="144" width="32" height="32"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" image="ic_notification_active"/>
