--- a/Foresome/Foresome/Leaders/New Group2/LeadersViewController.xib
+++ b/Foresome/Foresome/Leaders/New Group2/LeadersViewController.xib
@@ -21,8 +21,8 @@
             <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleAspectFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Tcr-AH-7G2" customClass="StrachyHeaderTable" customModule="Foresome" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="390" height="794"/>
+                <tableView clipsSubviews="YES" contentMode="scaleAspectFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="Tcr-AH-7G2" customClass="StrachyHeaderTable" customModule="Foresome" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="390" height="810"/>
                     <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </tableView>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="TG4-ob-HHr">
@@ -34,9 +34,9 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Tcr-AH-7G2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="HhA-Jh-Iaq"/>
-                <constraint firstAttribute="bottom" secondItem="Tcr-AH-7G2" secondAttribute="bottom" constant="50" id="Qq9-Cb-Mhi"/>
                 <constraint firstItem="Tcr-AH-7G2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="bbw-d8-9D1"/>
                 <constraint firstItem="TG4-ob-HHr" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="f5Z-Zp-lTq"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Tcr-AH-7G2" secondAttribute="bottom" id="fNX-6j-ZBA"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Tcr-AH-7G2" secondAttribute="trailing" id="j5h-uI-lbi"/>
                 <constraint firstItem="TG4-ob-HHr" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="sSo-Oi-Q2h"/>
             </constraints>
